force-app/main/default/objects/CMN_JobScheduler__c/CMN_JobScheduler__c.object-meta.xml
<CustomObject>
    <description>An object that can be used to manage CronTriggers (Scheduled Jobs) in a managed manager. Only accessible by Administrators.</description>
    <label>Job Scheduler</label>
    <nameField>
        <displayFormat>SCHED-{0000}</displayFormat>
        <label>Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Schedulers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>