force-app/main/default/objects/CMN_JobScheduler__c/fields/CMN_Active__c.field-meta.xml
<CustomField>
    <fullName>CMN_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Set this flag too true to ensure the scheduled job is initiated. If an error occurs this flag will be reset too false. In addition when a scheduled job is terminated this flag will also be set to false.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>