force-app/main/default/objects/CMN_JobScheduler__c/fields/CMN_CronExpression__c.field-meta.xml
<CustomField>
    <fullName>CMN_CronExpression__c</fullName>
    <description>This is a Salesforce specific Cron (https://en.wikipedia.org/wiki/Cron) expression that will be used to schedule jobs. The supported syntax can be found here (https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/apex_scheduler.htm)</description>
    <label>Cron Expression</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>