force-app/main/default/objects/CMN_JobScheduler__c/fields/CMN_Description__c.field-meta.xml
<CustomField>
    <fullName>CMN_Description__c</fullName>
    <inlineHelpText>Describes what the Job does and how often it runs</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>