force-app/main/default/objects/CMN_JobScheduler__c/fields/CMN_JobName__c.field-meta.xml
<CustomField>
    <fullName>CMN_JobName__c</fullName>
    <description>The name of the scheduled job, composed from Cron expression and Class being run</description>
    <formula>CMN_SchedulerName__c + &apos; - &apos; + &apos;(&apos; +  CMN_CronExpression__c + &apos;)&apos;</formula>
    <label>Job Name</label>
    <type>Text</type>
</CustomField>