force-app/main/default/objects/CMN_JobScheduler__c/fields/CMN_ScheduleClassName__c.field-meta.xml
<CustomField>
    <fullName>CMN_ScheduleClassName__c</fullName>
    <description>The APEX class that supports the Schedular framework and can be scheduled.</description>
    <label>Schedule Class Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>