force-app/main/default/objects/CMN_JobScheduler__c/fields/CMN_ScheduledJobId__c.field-meta.xml
<CustomField>
    <fullName>CMN_ScheduledJobId__c</fullName>
    <description>The Salesforce Id for the Job that was initiated for the current Job Schedular row.</description>
    <label>Scheduled Job Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>