force-app/main/default/objects/CMN_JobScheduler__c/fields/CMN_SchedulerName__c.field-meta.xml
<CustomField>
    <fullName>CMN_SchedulerName__c</fullName>
    <description>This is the user friendly name to be be provided when setting up a Schedule</description>
    <label>Scheduler Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>